@@ -1,4 +1,8 @@
 0.7.0:
+ - allow distro mirror selection to include availability-zone (LP: #1037727)
+ - allow arch specific mirror selection (select ports.ubuntu.com on arm)
+   LP: #1028501
+ - allow specification of security mirrors (LP: #1006963)
  - add the 'None' datasource (LP: #906669), which will allow jobs
    to run even if there is no "real" datasource found.
  - write ssh authorized keys to console, ssh_authkey_fingerprints
